# fullstack

./: Makefile  README.md  pyproject.toml
example/: Makefile
