[tool.poetry]
name = "fullstack-environment"
version = "0.1.0"
description = "fullstack environment"
authors = ["Nick Mazurkin <mazurkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.12"

[tool.poetry.group.flask.dependencies]
flask = "3.1.2"
flask-sqlalchemy = "3.1.1"
flask-cors = "6.0.1"

[tool.poetry.group.db.dependencies]
sqlalchemy = "2.0.44"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.1"
pytest-cov = "7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
